--- a/package.json
+++ b/package.json
@@ -133,7 +133,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
